[package]
name = "marche-server"
version = "0.1.0"
authors = ["Matthew Plant <maplant95@gmail.com>"]
edition = "2021"
default-run = "marche-server"

[dependencies]
rand = { version = "0.8" , features = ["getrandom"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono", "serde_json"] }
rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libpasta = "0.1"
chrono = "0.4"
maplit = "1.0"
lazy_static = "1.4"
diesel-derive-enum = { version = "1", features = ["postgres"] }
pulldown-cmark = "0.9"
rand_xorshift = "0.3.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]
